--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
    },
    "description": "Keep track of Redmine issues assigned to you.",
    "icons": {
-      "128": "redmine_logo_128.png"
+      "128": "img/redmine_logo_128.png"
    },
    "name": "Redmine Issues Checker",
    "options_page": "options.html",
