--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
       "128": "img/redmine_logo_128.png"
    },
    "name": "Redmine Issues Checker",
-   "options_page": "options.html",
+   "options_page": "fancy-settings/source/index.html",
    "permissions": [ "tabs", "notifications", "<all_urls>" ],
    "version": "0.60"
 }
